--- a/mgr/praca/podsumowanie.tex
+++ b/mgr/praca/podsumowanie.tex
@@ -1,62 +1,64 @@
 \chapter{Podsumowanie}
 
-W niniejszej pracy zademonstrowano urządzenie potrafiące określić swoje
-położenie jak i orientację w przestrzeni wykorzystują do tego celu ultradźwięki.
-Mimo że wykorzystano fale dźwiękowe o długość \SI{8}{mm}, pomiar położenia osiąga rozdzielczości rzędu \SI{0,5}{mm} 
-co znacząco wyróżnia się na tle innych rozwiązań.
-W tym rozdziale przedstawiono zalety jaki i wady prezentowanego rozwiązania.
+W niniejszej pracy przedstawiono urządzenie, które za pomocą ultradźwięków  potrafi określić zarówno swoje
+położenie, jak i orientację w przestrzeni.
 
+Mimo że przy pomiarze położenia wykorzystywane są fale dźwiękowe o długość \SI{8}{mm}, urządzenie to
+potrafi osiągnąć rozdzielczość  rzędu \SI{0,5}{mm}, co znacząco wyróżnia je na tle innych rozwiązań.
+Posiada także inne zalety, jak również wady, które opisano poniżej.
+\newline
 Zalety:
 \begin{itemize}
- \item Wysoka rozdzielczość pomiaru. Zastosowanie dużo wyższych częstotliwości 
- próbkowania od częstotliwości nadawanego sygnału, jak i zastosowane wyszukiwanie wzorca pozwoliło
- wielokrotnie zwiększyć rozdzielczość pomiaru w stosunku to długości wykorzystanej fali dźwiękowej.
+ \item Wysoka rozdzielczość pomiaru. Zastosowanie częstotliwości 
+ próbkowania dużo wyższych od częstotliwości nadawanego sygnału, a także wyszukiwanie wzorca pozwoliły
+ wielokrotnie zwiększyć rozdzielczość pomiaru w stosunku do długości wykorzystanej fali dźwiękowej.
  
- \item Praktycznie nieograniczona przestrzeń robocza. Mimo, że w prezentowanym prototypie
- ograniczono przestrzeń roboczą do kwadratu \SI{2,5}{m} $\times$ \SI{2,5}{m} $\times$ \SI{2,5}{m},
- to jest to jedynie ograniczenie praktyczne i bez większych problemów można ją dowolnie zwiększyć. Trzeba jednak 
- pamiętać, że siła sygnału dźwiękowego maleje kwadratowo wraz z odległością więc przy dużo większych odległościach
- niezbędne będą nadajniki większej mocy. 
+ \item Praktycznie nieograniczona przestrzeń robocza. Mimo że w prezentowanym prototypie
+ ograniczono przestrzeń roboczą do sześcianu \SI{2,5}{m} $\times$ \SI{2,5}{m} $\times$ \SI{2,5}{m},
+ jest to jedynie ograniczenie praktyczne i bez trudu można dowolnie zwiększyć tę przestrzeń. Trzeba jednak 
+ pamiętać, że siła sygnału dźwiękowego maleje kwadratowo wraz z odległością, więc przy dużo większych odległościach
+ niezbędne staje się zastosowanie nadajniki większej mocy. 
  
- \item Niski koszt budowy. 
+ \item Niski koszt komponentów.
 \end{itemize}
 
 Wady:
 \begin{itemize}
  \item Duża czułość na zmiany temperatury. Jest to najpoważniejsza wada prezentowanego rozwiązania.
- Zauważmy, że zmiana temperatury otoczenia rzędu \SI{1}{\degC} powoduje zmianę prędkości dźwięku o \SI{0,17}{\%} 
- co przy rozdzielczości \SI{5000}{px} w skrajnych przypadkach daje przesunięcie \SI{7.5}{px},
- co prawda w warunkach laboratoryjnych nie stanowi to większego problemu jednak w praktycznych zastosowaniach
+ Zauważmy, że zmiana temperatury otoczenia o \SI{1}{\degC} powoduje zmianę prędkości dźwięku o \SI{0,17}{\%},
+ co przy rozdzielczości \SI{5000}{px} w skrajnych przypadkach daje przesunięcie \SI{7.5}{px}.
+ Co prawda w warunkach laboratoryjnych nie stanowi to większego problemu, jednak w praktycznych zastosowaniach
  jest poważnym ograniczeniem.
  
- \item Długi czas odświeżania. Prezentowany prototyp dokonuje pomiary co \SI{350}{ms}, czyli około 3 pomiarów 
- na sekundę. Zauważmy, że mierząc cztery niezależne sygnały (z czterech głośników) kolejny sygnał mierzony jest co \SI{87}{ms},
-  dźwięk poruszający się z prędkością \SI{346}{m/s} w tym czasie przebędzie odległość 29.7 metrów.
- Tak duży dystans w stosunku do powierzchni roboczej jest konieczny by zapobiec nakładaniu się sygnałów pochodzących z poprzednich
- pomiarów z nowymi (nadany sygnał odbija się od ścian i wpływa na kolejne pomiary, czas rzędu \SI{87}{ms} pozwala 
- na jego całkowite rozproszenie).
- Można temu zaradzić nadając za każdym razem inny rozróżnialny sygnał, to podejście 
+ \item Długi czas odświeżania. Prezentowany prototyp dokonuje pomiarów co \SI{350}{ms}, czyli około 3 pomiarów 
+ na sekundę. Ponieważ mierzymy cztery niezależne sygnały (z czterech głośników), poszczególne sygnały mierzone są co \SI{87}{ms}.
+  Dźwięk poruszający się z prędkością \SI{346}{m/s}  przebędzie  w tym czasie odległość 29.7 metrów.
+ Tak duży dystans w stosunku do powierzchni roboczej jest konieczny, by zapobiec nakładaniu się sygnałów
+ (które po odbiciu się od ścian mogłyby wpłynąć na kolejne pomiary; czas rzędu \SI{87}{ms} pozwala 
+ na ich całkowite rozproszenie).
+ Zakłócaniu pomiarów można także zaradzić, nadając za każdym razem inny rozróżnialny sygnał, to podejście 
  wymaga jednak nadajników i odbiorników o większych możliwościach wysterowania.
  
  \item Stosunkowo mały kąt widzenia. Zastosowane przetworniki piezoelektryczne są przetwornikami kierunkowymi, co 
- znacząco wpływa na maksymalny kąt pod jakim można ustawić nadajnik względem odbiornika. W prezentowanym 
- prototypie kąt ten nie powinien przekraczać \ang{45}. Zastosowanie większej liczby przetworników lub inny ich rodzaj
- powinien znacząco zwiększyć ów kąt.
+ ogranicza  maksymalny kąt, pod jakim można ustawić nadajnik względem odbiornika. W prezentowanym 
+ prototypie kąt ten nie powinien przekraczać \ang{45}. Zastosowanie większej liczby przetworników lub innego ich rodzaju
+ pozwoliłoby znacznie zwiększyć te kąt.
 
  \item Ograniczone możliwości wysterowania rezonatorów piezoelektrycznych. 
- Zastosowane rezonatory nie nadają się do generowania krótkich impulsów, co znacząco uprościłyby mierzenie odległości.
+ Zastosowane rezonatory nie nadają się do generowania krótkich impulsów, co zdecydowanie uprościłoby mierzenie odległości.
  
- \item Problem z pomiarem pozycji i orientacji nadajnika w ruchu. W prezentowanym urządzeniu 
- jeden pomiar pozycji i orientacji wymaga pomiaru położenia czterech głośników w różnych odstępach czasowym.
- Jeśli podczas takiego pomiaru nadajnik porusza się z większą prędkością to otrzymane położenia
- przesunięte są względem siebie zgodnie z kierunkiem ruchu nadajnika. Takie przesunięcie negatywnie wpływa na 
+ \item Problem z ustaleniem pozycji i orientacji nadajnika w ruchu. W prezentowanym urządzeniu 
+ jeden pomiar pozycji i orientacji wymaga pomiaru położenia czterech głośników w różnych odstępach czasu.
+ Jeśli podczas takiego pomiaru nadajnik porusza się ze zbyt dużą prędkością, to otrzymamy położenie
+ przesunięte względem siebie zgodnie z kierunkiem ruchu nadajnika. Takie przesunięcie negatywnie wpływa na 
  pomiar orientacji. 
 \end{itemize}
 
 
-Jak widać, wykorzystanie dźwięków to określania pozycji i orientacji prócz niewątpliwych zalet ma również
-wiele wad. Najistotniejszą wadą wydaje się być duża wrażliwość na warunki atmosferyczne a szczególnie zmianę temperatury.
-Jest to zapewne główny powód dlaczego ów rozwiązanie nie jest szeroko stosowane w produktach komercyjnych.
+Reasumując: prezentowane urządzenie, wykorzystujące ultradźwięki do określania pozycji i orientacji,
+jest innowacyjną propozycją, która zapewnia znacznie większą dokładność niż wszystkie inne dostępne rozwiązania. 
+Najistotniejszą jego wadą wydaje się jednak duża wrażliwość na warunki atmosferyczne, a szczególnie zmianę temperatury.
+Jest to zapewne główny powód, dlaczego rozwiązanie to nie znajdzie  szerokiego zastosowania w produktach komercyjnych.
 
 
 
