--- a/mgr/praca/main.tex
+++ b/mgr/praca/main.tex
@@ -29,7 +29,7 @@
 \kierunek{Informatyka}
 \opiekun{dra Marcina Peczarskiego}
 
-\date{Czerwiec 2015}
+\date{Wrzesień 2015}
 
 %Podać dziedzinę wg klasyfikacji Socrates-Erasmus:
 \dziedzina{ 
@@ -141,6 +141,7 @@ TODO: dodać
 \include{mp3d}
 %\include{kalibracja}
 \include{podsumowanie}
+\include{zalaczniki}
 \include{biblio}
 %\include{dodatek}
 
