--- a/mgr/praca/main.tex
+++ b/mgr/praca/main.tex
@@ -27,7 +27,7 @@
 \tytulang{Determining position and orientation in space using ultrasound}
 
 \kierunek{Informatyka}
-\opiekun{dra Marcina Peczarskiego}
+\opiekun{dra inż. Marcina Peczarskiego}
 
 \date{Wrzesień 2015}
 
