--- a/mgr/praca/mp3d.tex
+++ b/mgr/praca/mp3d.tex
@@ -1,4 +1,4 @@
-\chapter{Przetwarzanie danych zebranych z odbiorników}
+\chapter{Przetwarzanie danych zebranych z odbiornika}
 
 W ramach niniejszej pracy powstało oprogramowanie w \textit{Pythonie}, którego zadaniem jest
 przekształcenie surowych danych ultradźwiękowych 
