--- a/mgr/praca/teoria.tex
+++ b/mgr/praca/teoria.tex
@@ -94,13 +94,13 @@ Prędkość dźwięku w powietrzu w dużym stopniu zależy od panujących warunk
 zwłaszcza temperatury.
 Dla gazu doskonałego prędkość ta wyraża się wzorem:
 \[
-V = \num{331,3}  \sqrt{1+\frac{T}{\num{273,15}}} \qquad \left[ \si{\frac{m}{s}} \right]
+V = \num{331,3}  \sqrt{1+\frac{T}{\num{273,15}}} \qquad \left[ \SI{}{\frac{m}{s}} \right]
 \]
 
 gdzie $T$ jest temperaturą w stopniach Celsjusza (\SI{}{\degC}).
 Wzór ten możemy przybliżyć za pomocą rozwinięcia Taylora dla temperatur bliskich temperaturze pokojowej \SI{25}{\degC}:
 \[
- V = \num{346,13}  +  \num{0,580}(T - \num{25}\arcdeg)  \qquad \left[ \si{ \frac{m}{s} \right]
+ V = \num{346,13}  +  \num{0,580}(T - \num{25}\arcdeg)  \qquad \left[ \SI{}{ \frac{m}{s}} \right]
 \]
 
 Mimo że współczynnik temperaturowy jest stosunkowo mały i stanowi jedynie 0,17\% całej prędkości,
