--- a/mgr/praca/nadajnik.tex
+++ b/mgr/praca/nadajnik.tex
@@ -1,30 +1,33 @@
-\chapter{Nadajnik ultradźwiękowy}
+
+\chapter{Budowa prototypu}
 
 Prezentowany prototyp składa się z dwóch części: nadajnika i odbiornika, pomiędzy którymi
-dokonywany jest pomiar odległości. Niniejszy rozdział opisuje budowę i funkcjonowanie nadajnika. 
+dokonywany jest pomiar odległości. W niniejszym rozdziale przedstawiono zasadę funkcjonowanie 
+poszczególnych komponentów.
 
-\section{Budowa i zasada działania}
+\section{Budowa i zasada działania nadajnika}
 
 Nadajnik zbudowany został na bazie płytki prototypowej \textit{Arduino Nano} \cite{bib:arduinoNano},
-która składa się z procesora ATmega328 \cite{bib:atmega328} taktowanego \SI{16}{MHz} rezonatorem kwarcowym,
-\SI{5}{V} stabilizatora napięcia oraz układu FT232RL umożliwiającego 
+która składa się z procesora ATmega328 \cite{bib:atmega328} taktowanego rezonatorem kwarcowym \SI{16}{MHz},
+stabilizatora napięcia \SI{5}{V} oraz układu FT232RL umożliwiającego 
 jej programowanie  ze środowiska \textit{Arduino} \cite{bib:Arduino} za pośrednictwem portu USB. 
 \textit{Arduino Nano} połączono 
-bezpośrednio z czterema nadajnikami ultradźwiękowymi (głośnikami, rezonatorami piezoelektrycznymi) typu 40ST-12 \cite{bib:40ST12}.
+bezpośrednio z czterema nadajnikami ultradźwiękowymi (głośnikami, rezonatorami piezoelektrycznymi) typu 40ST-12 \cite{bib:40ST12},
+złączem SV1 doprowadzono zasilanie oraz sygnały sterujące z odbiornika. 
 Schemat połączeń przedstawia rysunek \ref{fig:nadajnik_schemat}.
 
- \begin{figure}[ht!]
+ \begin{figure}[h]
     \centering
     \includegraphics[width=0.6\textwidth, trim= 0mm 0mm 0mm 0mm,clip]{transmitter}
-    \caption{Schemat nadajnika.}
+    \caption{Schemat nadajnika}
     \label{fig:nadajnik_schemat}
 \end{figure}
 
 Całość umieszczono na ramie w kształcie litery H wykonanej z rurek PCV.
-Rezonatory dodatkowo odizolowano przy użyciu rzepów od ramy, co ułatwia ich demontaż, a także skutecznie
+Rezonatory dodatkowo odizolowano  od ramy przy użyciu rzepów, co ułatwia ich demontaż, a także skutecznie
 zapobiega przenoszeniu się drgań. 
 
-\rysunek{nadajnik_H}{Szkic ramy nadajnika.}{\label{fig:nadajnik_szkic}}
+\rysunek{nadajnik_H}{Szkic ramy nadajnika}{\label{fig:nadajnik_szkic}}
 
 
 \textit{Android Nano} połączony jest z odbiornikiem sześciometrowym kablem, którym przesyłane są sygnały sterujące oraz zasilanie.
@@ -41,14 +44,12 @@ jest przesunięta względem części wyzwalającej o 180 stopni.
 Rysunek \ref{fig:output_signal} przedstawia sygnał, jakim wysterowany jest przetwornik piezoelektryczny. 
 
 
-\begin{figure}[h!]
+\begin{figure}[h]
     \centering
     \includegraphics[width=1.15\textwidth, trim= 47mm 0mm 0mm 0mm,clip]{output_signal}
-    \caption{Sygnał wysterowania przetwornika piezoelektrycznego.}
+    \caption{Sygnał podawany na przetwornik piezoelektryczny}
     \label{fig:output_signal}
 \end{figure}
-
-\newpage
 
 \section{Dobór rezonatorów piezoelektrycznych}
 
@@ -61,6 +62,8 @@ zbliżonych częstotliwościach rezonansowych.
 Tabela \ref{table:czestotliwosci} zawiera wyniki pomiarów częstotliwości. Gwiazdką oznaczono wykorzystane przetworniki piezoelektryczne.
 
 \begin{table}[t]
+  \caption{Częstotliwości rezonansowe przetworników piezoelektrycznych}
+  \label{table:czestotliwosci}
   \centering
   \begin{tabular}{|r|r|r|}
     \hline 
@@ -83,8 +86,6 @@ Tabela \ref{table:czestotliwosci} zawiera wyniki pomiarów częstotliwości. Gwi
     15 &   \SI{39,64}{kHz} &  \SI{39,11}{kHz} \\
     \hline
   \end{tabular}
-  \caption{Częstotliwości rezonansowe przetworników piezoelektrycznych.}
-  \label{table:czestotliwosci}
 \end{table}
 
 
