--- a/mgr/praca/podsumowanie.tex
+++ b/mgr/praca/podsumowanie.tex
@@ -17,7 +17,7 @@ Zalety:
  ograniczono przestrzeń roboczą do sześcianu \SI{2,5}{m} $\times$ \SI{2,5}{m} $\times$ \SI{2,5}{m},
  jest to jedynie ograniczenie praktyczne i bez trudu można dowolnie zwiększyć tę przestrzeń. Trzeba jednak 
  pamiętać, że siła sygnału dźwiękowego maleje kwadratowo wraz z odległością, więc przy dużo większych odległościach
- niezbędne staje się zastosowanie nadajniki większej mocy. 
+ niezbędne staje się zastosowanie nadajników większej mocy. 
  
  \item Niski koszt komponentów.
 \end{itemize}
@@ -25,14 +25,14 @@ Zalety:
 Wady:
 \begin{itemize}
  \item Duża czułość na zmiany temperatury. Jest to najpoważniejsza wada prezentowanego rozwiązania.
- Zauważmy, że zmiana temperatury otoczenia o \SI{1}{\degC} powoduje zmianę prędkości dźwięku o \SI{0,17}{\%},
+ Zauważmy, że zmiana temperatury otoczenia o $ 1\arcdeg\ $ powoduje zmianę prędkości dźwięku o 0,17\%,
  co przy rozdzielczości \SI{5000}{px} w skrajnych przypadkach daje przesunięcie \SI{7.5}{px}.
  Co prawda w warunkach laboratoryjnych nie stanowi to większego problemu, jednak w praktycznych zastosowaniach
  jest poważnym ograniczeniem.
  
  \item Długi czas odświeżania. Prezentowany prototyp dokonuje pomiarów co \SI{350}{ms}, czyli około 3 pomiarów 
  na sekundę. Ponieważ mierzymy cztery niezależne sygnały (z czterech głośników), poszczególne sygnały mierzone są co \SI{87}{ms}.
-  Dźwięk poruszający się z prędkością \SI{346}{m/s}  przebędzie  w tym czasie odległość 29.7 metrów.
+  Dźwięk poruszający się z prędkością \SI{346}{m/s}  przebędzie  w tym czasie odległość \SI{29.7}{m}.
  Tak duży dystans w stosunku do powierzchni roboczej jest konieczny, by zapobiec nakładaniu się sygnałów
  (które po odbiciu się od ścian mogłyby wpłynąć na kolejne pomiary; czas rzędu \SI{87}{ms} pozwala 
  na ich całkowite rozproszenie).
@@ -55,7 +55,7 @@ Wady:
 \end{itemize}
 
 
-Reasumując: prezentowane urządzenie, wykorzystujące ultradźwięki do określania pozycji i orientacji,
+Reasumując, prezentowane urządzenie, wykorzystujące ultradźwięki do określania pozycji i orientacji,
 jest innowacyjną propozycją, która zapewnia znacznie większą dokładność niż wszystkie inne dostępne rozwiązania.
 Najistotniejszą jego wadą wydaje się jednak duża wrażliwość na warunki atmosferyczne, a szczególnie zmianę temperatury.
 Jest to zapewne główny powód, dlaczego rozwiązanie to nie znajdzie  szerokiego zastosowania w produktach komercyjnych.
