--- a/mgr/praca/mp3d.tex
+++ b/mgr/praca/mp3d.tex
@@ -1,9 +1,9 @@
-\chapter{Przetwarzanie danych zebranych z odbiornika}
+\chapter{Przetwarzanie danych zebranych z~ odbiornika}
 
 W ramach niniejszej pracy powstało oprogramowanie w \textit{Pythonie}, którego zadaniem jest
 przekształcenie surowych danych ultradźwiękowych 
 z odbiornika na informację o położeniu nadajnika w przestrzeni oraz jego orientacji.
-Na oprogramowanie składa się: biblioteka \textit{mp3d} zajmująca się
+Na oprogramowanie składają się biblioteka \textit{mp3d} zajmująca się
 sterowaniem odbiornikiem, odbieraniem sygnałów ultradźwiękowych i ich analizą, program \textit{scan.py}
 wizualizujący dane w postaci obrazu trójwymiarowego oraz program \textit{save-pattern.py},
 który służy do wstępnej kalibracji urządzenia.
@@ -22,10 +22,10 @@ Najistotniejszą częścią oprogramowania jest biblioteka \textit{mp3d} podziel
 
 \section{Komunikacja z odbiornikiem, moduł \textit{com.py}}
 
-Za komunikację z odbiornikiem odpowiada jest moduł \textit{com.py}.
+Za komunikację z odbiornikiem odpowiedzialny jest moduł \textit{com.py}.
 Pracuje on w oddzielnym wątku, w którym cyklicznie wysyłane są żądania, by dany głośnik nadał sygnał,
 a następnie odbierane są sygnały z trzech mikrofonów.
-Ten proces odbywa się kolejno dla każdego z czterech głośników nadajnika.
+Ten proces odbywa się kolejno dla każdego z~ czterech głośników nadajnika.
 Zebrane w ten sposób dwanaście sygnałów po wstępnej filtracji przekazywane są dalej do \textit{find\_pattern.py}. Cały cykl powtarza 
 się co \SI{350}{ms}. Rysunek \ref{fig:com_output_2m} przedstawia sygnał odebrany z jednego z mikrofonów.
 
@@ -36,58 +36,56 @@ się co \SI{350}{ms}. Rysunek \ref{fig:com_output_2m} przedstawia sygnał odebra
     \includegraphics[width=1.15\textwidth, trim= 47mm 0mm 0mm 0mm,clip]{com_output_2m_2}
     \caption{Sygnał odebrany przez moduł \textit{com.py}. 
     Odległość między nadajnikiem a odbiornikiem wynosi 2 metry.
-    Na górnym wykresie po prawej stronie widać również sygnały odbite od ścian.
-    }
+    Na górnym wykresie po prawej stronie widać również sygnały odbite od ścian}
     \label{fig:com_output_2m}
 \end{figure}
 
 \newpage
 \section{Wyznaczanie odległości, moduł \textit{find\_pattern.py}}
 
-Moduł \textit{find\_pattern.py} odpowiada za obliczenie odległości pomiędzy czterema głośnikami i trzema mikrofonami.
+Moduł \textit{find\_pattern.py} odpowiada za obliczenie odległości pomiędzy czterema głośnikami i~ trzema mikrofonami.
 Wyznaczana jest ona przez wyszukanie w każdym z 12 odebranych sygnałów  położenia \textit{wzorca}, który 
 odpowiada czołu nadanego sygnału (rysunek \ref{fig:com_output_2m}).
 \textit{Wzorzec} po raz pierwszy wprowadza się podczas kalibracji, a następnie ciągle aktualizuje 
 (podmienia na sygnałem pasującym do \textit{wzorca}).
 
 W celu wyszukania \textit{wzorca} wewnątrz sygnału korzysta się z  metody najmniejszego błędu średniokwadratowego:
-
-Niech $w(t)$  dla $t = 0, ..., n-1$ będzie szukanym \textit{wzorcem}, a $f(x)$ odebranym sygnałem.
+Niech $w(t)$  dla $t = 0, ..., n-1$ będzie szukanym \textit{wzorcem}, a $f(x)$ dla $x = 0, ..., m-1$ odebranym sygnałem.
 Wtedy możemy znaleźć takie $a$, że błąd średniokwadratowy $E(x)$ pomiędzy $w(t)$ i $a f(t+x)$ jest minimalny.
-Możemy to zapisać w postaci:
+Możemy to zapisać w postaci
 \[
-  E(x) = \min_{a \in R} \{ \sum_{t=0}^{n-1}  (w(t) - a f(t+x))^2 \}
+  E(x) = \min_{a \in R} \{ \sum_{t=0}^{n-1}  (w(t) - a f(t+x))^2 \}.
 \]
-po podniesieniu wyrażenia w nawiasie do kwadratu otrzymujemy:
+Po podniesieniu wyrażenia w nawiasie do kwadratu otrzymujemy
 \[
-  E(x) = \min_{a \in R} \{ \sum_{t=0}^{n-1}  (w^2(t) -2a w(t) f(t+x) + a^2 f^2(t+x)) \}
+  E(x) = \min_{a \in R} \{ \sum_{t=0}^{n-1}  (w^2(t) -2a w(t) f(t+x) + a^2 f^2(t+x)) \},
 \]
 \[
-  E(x) = \min_{a \in R} \{ \sum_{t=0}^{n-1}  w^2(t) -2a \sum_{t=0}^{n-1}  w(t) f(t+x) + a^2 \sum_{t=0}^{n-1} f^2(t+x) \}
+  E(x) = \min_{a \in R} \{ \sum_{t=0}^{n-1}  w^2(t) -2a \sum_{t=0}^{n-1}  w(t) f(t+x) + a^2 \sum_{t=0}^{n-1} f^2(t+x) \}.
 \]
-aby wyliczyć $E(x)$, należy zminimalizować wyrażenie:
+Aby wyliczyć $E(x)$, należy zminimalizować wyrażenie
 \[
-  y(a) = \sum_{t=0}^{n-1}  w^2(t) -2a \sum_{t=0}^{n-1}  w(t) f(t+x) + a^2 \sum_{t=0}^{n-1} f^2(t+x)
+  y(a) = \sum_{t=0}^{n-1}  w^2(t) -2a \sum_{t=0}^{n-1}  w(t) f(t+x) + a^2 \sum_{t=0}^{n-1} f^2(t+x).
 \]
- korzystając z faktu, że $y(a)$ jest funkcją kwadratową, możemy wyliczyć $a$ minimalizujące $y(a)$:
+Korzystając z faktu, że $y(a)$ jest funkcją kwadratową, możemy wyliczyć $a$ minimalizujące $y(a)$
 \[
- a = \frac{ \sum\limits_{t=0}^{n-1}  w(t) f(t+x) }{ \sum\limits_{t=0}^{n-1} f^2(t+x) }
+  a = \frac{ \sum\limits_{t=0}^{n-1}  w(t) f(t+x) }{ \sum\limits_{t=0}^{n-1} f^2(t+x) }.
 \]
-ostatecznie dostajemy wzór na $E(x)$:
+Ostatecznie dostajemy wzór na $E(x)$
 \[
-  E(x) = \sum_{t=0}^{n-1}  w^2(t)  - \frac {(\sum\limits_{t=0}^{n-1}  w(t) f(t+x) )^2 } { \sum\limits_{t=0}^{n-1} f^2(t+x)}
+  E(x) = \sum_{t=0}^{n-1}  w^2(t)  - \frac {\left(\sum\limits_{t=0}^{n-1}  w(t) f(t+x) \right)^2 } { \sum\limits_{t=0}^{n-1} f^2(t+x)}.
 \]
 
 Zauważmy, że dzięki skalowaniu skalarem $a$  sygnału $f(x)$, a nie \textit{wzorca} $w(x)$,
 otrzymane $E(x)$ nie zależy od siły odebranego sygnału. Ułatwia to porównanie błędów w dwóch różnych miejscach.
 $E(x)$ zależy jednak od siły sygnału wzorcowego -- możemy się od niego  uniezależnić, wyznaczając
-błąd względny $e(x)$:
+błąd względny $e(x)$
 \[
-  e(x) = \frac{E(x)}{\sum\limits_{t=0}^{n-1}  w^2(t)}
+  e(x) = \frac{E(x)}{\sum\limits_{t=0}^{n-1}  w^2(t)}.
 \]
-po podstawieniu $E(x)$ dostajemy:
+Po podstawieniu $E(x)$ dostajemy
 \[
-  e(x) = 1 - \frac {(\sum\limits_{t=0}^{n-1}  w(t) f(t+x) )^2 } { \sum\limits_{t=0}^{n-1} f^2(t+x) \sum\limits_{t=0}^{n-1}  w^2(t)}
+  e(x) = 1 - \frac {\left(\sum\limits_{t=0}^{n-1}  w(t) f(t+x) \right)^2 } { \sum\limits_{t=0}^{n-1} f^2(t+x) \sum\limits_{t=0}^{n-1}  w^2(t)}.
 \]
  
  Funkcję $e(x)$  można interpretować następująco:
@@ -95,14 +93,14 @@ po podstawieniu $E(x)$ dostajemy:
  odebranym sygnale $f$. 
 
  Wynikiem obliczeń modułu \textit{find\_pattern.py} jest cała funkcja $e(x)$, na podstawie której moduł \textit{xyz.py}
- wyznaczy pozycję i orientację nadajnika, uwzględniając przy tym 
+ wyznacza pozycję i orientację nadajnika, uwzględniając przy tym 
  jego kształt (nadmiarowość danych), a także prawdopodobieństwo, że znaleziony \textit{wzorzec} znajduje się w określonej pozycji.
- Rysunk \ref{fig:blad_korel} przedstawia wynik przetwarzania sygnału przez moduł \textit{find\_pattern.py}.
+ Rysunek \ref{fig:blad_korel} przedstawia wynik przetwarzania sygnału przez moduł \textit{find\_pattern.py}.
 
 \begin{figure}[h!]
     \centering
     \includegraphics[width=1.15\textwidth, trim= 47mm 0mm 0mm 0mm,clip]{blad_korel}
-    \caption{Sygnał przetworzony przez moduł \textit{find\_pattern.py}.}
+    \caption{Sygnał przetworzony przez moduł \textit{find\_pattern.py}}
     \label{fig:blad_korel}
 \end{figure}
  
@@ -183,11 +181,11 @@ Rysunek \ref{fig:kalibracja_12x} przedstawia 12 sygnałów wraz z zaznaczonymi w
 Do obsługi prototypu służy program \textit{scan.py}. Po jego uruchomieniu 
 na monitorze wyświetlają się trzy okna: 
 \begin{itemize}
- \item widok 3D prezentujący położenie nadajnika w przestrzeni. W oknie widoczne są  
+ \item widok 3D prezentujący położenie nadajnika w przestrzeni -- w oknie widoczne są  
  cztery punkty reprezentujące głośniki nadajnika oraz trzy prostopadłe względem siebie wektory określające 
 jego orientację i położenie (rysunek \ref{fig:widok3d}),
- \item widok 2D, również przestawiające położenie nadajnika w przestrzeni. 
- Są to nałożone na siebie rzuty na płaszczyzny XY i XZ
+ \item widok 2D, również przestawiające położenie nadajnika w przestrzeni --
+ są to nałożone na siebie rzuty na płaszczyzny XY i XZ
  (rysunek \ref{fig:widok2d}),
  \item diagram informujący o mocy całego odebranego sygnału, mocy \textit{wzorca}, mocy sygnału pasującego do \textit{wzorca} 
  oraz błędzie pomiędzy \textit{wzorcem} a odebranym sygnałem (rysunek \ref{fig:power}).
@@ -200,8 +198,8 @@ Jeśli któryś z głośników straci widoczność z mikrofonami, obraz przestaj
 się dzieje, widoczna jest w oknie przedstawiającym moc sygnału.
 
 
-\rysunek{3d}{Widok 3D.}{\label{fig:widok3d}}
-\rysunek{2d}{Widok 2D.}{\label{fig:widok2d}}
+\rysunek{3d}{Widok 3D}{\label{fig:widok3d}}
+\rysunek{2d}{Widok 2D}{\label{fig:widok2d}}
 \rysunek{power}{Diagram informujący o mocy całego odebranego sygnału, mocy \textit{wzorca}, mocy sygnału pasującego do \textit{wzorca} 
- oraz błędzie pomiędzy \textit{wzorcem} a odebranym sygnałem.}{\label{fig:power}}
+ oraz błędzie pomiędzy \textit{wzorcem} a odebranym sygnałem}{\label{fig:power}}
 
