--- a/mgr/praca/teoria.tex
+++ b/mgr/praca/teoria.tex
@@ -8,21 +8,17 @@ $\boldsymbol{y_1,y_2,y_3}$ stałymi punktami o znanym położeniu, a $r_1,r_2,r_
 
 \rysunekW{polozenie}{Wyznaczenie położenia na podstawie odległości od punktów stałych}{\label{fig:polozenie}}{0.7}
 Wtedy $\boldsymbol{x}$ możemy wyznaczyć za pomocą układu równań:
-\[
  \begin{align}
-    |\boldsymbol{y_1} - \boldsymbol{x}| &= r_1,
- \\ |\boldsymbol{y_2} - \boldsymbol{x}| &= r_2,
- \\ |\boldsymbol{y_3} - \boldsymbol{x}| &= r_3,
+    \nonumber |\boldsymbol{y_1} - \boldsymbol{x}| &= r_1,
+ \\ \nonumber |\boldsymbol{y_2} - \boldsymbol{x}| &= r_2,
+ \\ \nonumber |\boldsymbol{y_3} - \boldsymbol{x}| &= r_3,
  \end{align}
-\]
 co dla przestrzeni euklidesowej daje:
-\[
- \begin{align}
-     (y_{11}-x_1)^2 + (y_{12}-x_2)^2 + (y_{13}-x_3)^2 &= r_1^2,
- \\  (y_{21}-x_1)^2 + (y_{22}-x_2)^2 + (y_{23}-x_3)^2 &= r_2^2,
- \\  (y_{31}-x_1)^2 + (y_{32}-x_2)^2 + (y_{33}-x_3)^2 &= r_3^2.
+ \begin{align}  
+    \nonumber   (y_{11}-x_1)^2 + (y_{12}-x_2)^2 + (y_{13}-x_3)^2 &= r_1^2,
+ \\ \nonumber   (y_{21}-x_1)^2 + (y_{22}-x_2)^2 + (y_{23}-x_3)^2 &= r_2^2,
+ \\ \nonumber   (y_{31}-x_1)^2 + (y_{32}-x_2)^2 + (y_{33}-x_3)^2 &= r_3^2.
  \end{align}
-\]
 
 Zauważmy, że znając odległość $\boldsymbol{x}$ od jednego z punktów stałych, wiemy, że $\boldsymbol{x}$ będzie leżał na
 sferze o promieniu równym danej odległości. Znając dwie odległości, możemy ograniczyć poszukiwania do części wspólnej dwóch sfer,
@@ -36,21 +32,17 @@ $\boldsymbol{y_1}=(\frac{a}{2},0,0), \boldsymbol{y_2}=(-\frac{a}{2},0,0), \bolds
 Zatem $\boldsymbol{y_1}, \boldsymbol{y_2}, \boldsymbol{y_3}$ są wierzchołkami
 trójkąta równoramiennego o wysokości $h$ i podstawie $a$, natomiast układ równań upraszcza
 się do postaci:
-\[
  \begin{align}
-     (\frac{a}{2}-x_1)^2 + x_2^2 + x_3^2 &= r_1^2,
- \\  (\frac{a}{2}+x_1)^2 + x_2^2 + x_3^2 &= r_2^2,
- \\  x_1^2 + (h-x_2)^2 + x_3^2 &= r_3^2,
+    \nonumber  (\frac{a}{2}-x_1)^2 + x_2^2 + x_3^2 &= r_1^2,
+ \\ \nonumber  (\frac{a}{2}+x_1)^2 + x_2^2 + x_3^2 &= r_2^2,
+ \\ \nonumber  x_1^2 + (h-x_2)^2 + x_3^2 &= r_3^2,
  \end{align}
-\]
 z czego ostatecznie otrzymujemy:
-\[
  \begin{align}
-     x_1 &= \frac{r_2^2 - r_1^2}{2a},
- \\  x_2 &= \frac{r_2^2 - r_3^2 + x_1^2 - (\frac{a}{2}+x_1)^2}{2h}  + \frac{h}{2},
- \\  x_3 &= \pm \sqrt{r_3^2-x_1^2-(h-x_2)^2}.
+    \nonumber  x_1 &= \frac{r_2^2 - r_1^2}{2a},
+ \\ \nonumber  x_2 &= \frac{r_2^2 - r_3^2 + x_1^2 - (\frac{a}{2}+x_1)^2}{2h}  + \frac{h}{2},
+ \\ \nonumber  x_3 &= \pm \sqrt{r_3^2-x_1^2-(h-x_2)^2}.
  \end{align}
-\]
 
 
 \section{Wyznaczanie orientacji w przestrzeni}
