--- a/mgr/praca/zalaczniki.tex
+++ b/mgr/praca/zalaczniki.tex
@@ -3,7 +3,7 @@
 
 Na płycie CD-ROM dołączonej do niniejszej pracy znajdują się:
 \begin{itemize}
- \item kopia niniejszej pracy w formacie .pdf i jej tekst źródłowy w języku LATEX,
+ \item kopia niniejszej pracy w PDF i jej tekst źródłowy w języku \LaTeX,
  \item kod źródłowy nadajnika,
  \item kod źródłowy odbiornika,
  \item kod źródłowy programu \textit{scan.py} i \textit{save-pattern.py} wraz z biblioteką \textit{mp3d}.
