--- a/mgr/praca/odbiornik.tex
+++ b/mgr/praca/odbiornik.tex
@@ -49,8 +49,6 @@ Odległości pomiędzy modułami ultradźwiękowymi są z góry ustalone, co uł
 \rysunek{trojkat}{Szkic ramy odbiornika}{\label{fig:trojkat}}
 
 
-
-\clearpage
 \section{Budowa modułu ultradźwiękowego}
 
 Odbiornik wyposażony został w trzy moduły ultradźwiękowe, których zadaniem jest 
@@ -95,7 +93,7 @@ Istnieje możliwość odcięcia zasilania poprzez rozwarcie JP5, co jest koniecz
 STM32F407VGT6 by nie uszkodzić stabilizatora napięcia.
 Z przystawki przez wtyczkę JP6 wyprowadzono również sygnały sterujące nadajnikiem oraz zasilanie.
 
- \begin{figure}[h!]
+ \begin{figure}[h]
     \centering
     \includegraphics[width=1\textwidth, trim= 5mm 0mm 0mm 0mm,clip]{mainboard2}
     \caption{Schemat budowy przystawki do \textit{stm32f4-discovery}}
