--- a/mgr/praca/podsumowanie.tex
+++ b/mgr/praca/podsumowanie.tex
@@ -25,7 +25,7 @@ Zalety:
 Wady:
 \begin{itemize}
  \item Duża czułość na zmiany temperatury. Jest to najpoważniejsza wada prezentowanego rozwiązania.
- Zauważmy, że zmiana temperatury otoczenia o $ 1\arcdeg\ $ powoduje zmianę prędkości dźwięku o 0,17\%,
+ Zauważmy, że zmiana temperatury otoczenia o \ang{1} powoduje zmianę prędkości dźwięku o 0,17\%,
  co przy rozdzielczości \SI{5000}{px} w skrajnych przypadkach daje przesunięcie \SI{7.5}{px}.
  Co prawda w warunkach laboratoryjnych nie stanowi to większego problemu, jednak w praktycznych zastosowaniach
  jest poważnym ograniczeniem.
