--- a/mgr/praca/nadajnik.tex
+++ b/mgr/praca/nadajnik.tex
@@ -12,8 +12,8 @@ która składa się z procesora ATmega328 \cite{bib:atmega328} taktowanego rezon
 stabilizatora napięcia \SI{5}{V} oraz układu FT232RL umożliwiającego 
 jej programowanie  ze środowiska \textit{Arduino} \cite{bib:Arduino} za pośrednictwem portu USB. 
 \textit{Arduino Nano} połączono 
-bezpośrednio z czterema nadajnikami ultradźwiękowymi (głośnikami, rezonatorami piezoelektrycznymi) typu 40ST-12 \cite{bib:40ST12},
-złączem SV1 doprowadzono zasilanie oraz sygnały sterujące z odbiornika. 
+bezpośrednio z czterema nadajnikami ultradźwiękowymi (głośnikami, rezonatorami piezoelektrycznymi) typu 40ST-12 \cite{bib:40ST12}.
+Do płytki doprowadzono zasilanie oraz sygnały sterujące z odbiornika złączem SV1. 
 Schemat połączeń przedstawia rysunek \ref{fig:nadajnik_schemat}.
 
  \begin{figure}[h]
