--- a/mgr/praca/teoria.tex
+++ b/mgr/praca/teoria.tex
@@ -61,7 +61,7 @@ definiują jego orientację (rysunek \ref{fig:orientacja}).
     \label{fig:orientacja}
 \end{figure}
 Na rysunku punkt $\boldsymbol{o} = (\boldsymbol{x_1} + \boldsymbol{x_2} + \boldsymbol{x_3} + \boldsymbol{x_4})/4$ jest szukanym położeniem
-nadajnika, a~ wektory $\boldsymbol{\overrightarrow{a}} = (\boldsymbol{x_2} + \boldsymbol{x_4})/2 - \boldsymbol{o}$ oraz 
+nadajnika, a~wektory $\boldsymbol{\overrightarrow{a}} = (\boldsymbol{x_2} + \boldsymbol{x_4})/2 - \boldsymbol{o}$ oraz 
 $\boldsymbol{\overrightarrow{b}} = (\boldsymbol{x_1} + \boldsymbol{x_2})/2 - \boldsymbol{o}$ wyznaczają jednoznacznie
 orientację przestrzenną nadajnika.
 
@@ -90,9 +90,9 @@ V = \num{331,3}  \sqrt{1+\frac{T}{\num{273,15}}} \qquad \left[ \SI{}{\frac{m}{s}
 \]
 
 gdzie $T$ jest temperaturą w stopniach Celsjusza (\SI{}{\degC}).
-Wzór ten możemy przybliżyć za pomocą rozwinięcia Taylora dla temperatur bliskich temperaturze pokojowej \SI{25}{\degC}:
+Wzór ten możemy przybliżyć za pomocą rozwinięcia Taylora dla temperatur bliskich temperaturze pokojowej \ang{25}\SI{}{C}:
 \[
- V = \num{346,13}  +  \num{0,580}(T - \num{25}\arcdeg)  \qquad \left[ \SI{}{ \frac{m}{s}} \right]
+ V = \num{346,13}  +  \num{0,580}(T - \ang{25})  \qquad \left[ \SI{}{ \frac{m}{s}} \right]
 \]
 
 Mimo że współczynnik temperaturowy jest stosunkowo mały i stanowi jedynie 0,17\% całej prędkości,
