--- a/mgr/praca/nadajnik.tex
+++ b/mgr/praca/nadajnik.tex
@@ -47,7 +47,7 @@ Rysunek \ref{fig:output_signal} przedstawia sygnał, jaki podawany jest na przet
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=1.15\textwidth, trim= 47mm 0mm 0mm 0mm,clip]{output_signal}
+    \includegraphics[width=1.0\textwidth, trim= 27mm 0mm 0mm 0mm,clip]{output_signal}
     \caption{Sygnał podawany na przetwornik piezoelektryczny}
     \label{fig:output_signal}
 \end{figure}
@@ -62,7 +62,7 @@ zbliżonych częstotliwościach rezonansowych.
 
 Tabela \ref{table:czestotliwosci} zawiera wyniki pomiarów częstotliwości. Gwiazdką oznaczono wykorzystane przetworniki piezoelektryczne.
 
-\begin{table}[t]
+\begin{table}[h]
   \caption{Częstotliwości rezonansowe przetworników piezoelektrycznych}
   \label{table:czestotliwosci}
   \centering
