--- a/mgr/praca/mp3d.tex
+++ b/mgr/praca/mp3d.tex
@@ -49,50 +49,50 @@ odpowiada czołu nadanego sygnału (rysunek \ref{fig:com_output_2m}).
 \textit{Wzorzec} po raz pierwszy wprowadza się podczas kalibracji, a następnie ciągle aktualizuje 
 (podmienia na sygnałem pasującym do \textit{wzorca}).
 
-W celu wyszukania \textit{wzorca} wewnątrz sygnału korzysta się z  metody najmniejszego błędu średniokwadratowego:
-Niech $w(t)$  dla $t = 0, ..., n-1$ będzie szukanym \textit{wzorcem}, a $f(x)$ dla $x = 0, ..., m-1$ odebranym sygnałem.
-Wtedy możemy znaleźć takie $a$, że błąd średniokwadratowy $E(x)$ pomiędzy $w(t)$ i $a f(t+x)$ jest minimalny.
+W celu wyszukania \textit{wzorca} wewnątrz sygnału korzysta się z  metody najmniejszego błędu średniokwadratowego.
+Niech $w(x)$  dla $x = 0, ..., n-1$ będzie szukanym \textit{wzorcem}, a $f(t)$ dla $t = 0, ..., m-1$ odebranym sygnałem.
+Wtedy możemy znaleźć takie $a$, że błąd średniokwadratowy $E(t)$ pomiędzy $w(x)$ i $a f(t+x)$ jest minimalny.
 Możemy to zapisać w postaci
 \[
-  E(x) = \min_{a \in R} \{ \sum_{t=0}^{n-1}  (w(t) - a f(t+x))^2 \}.
+  E(t) = \min_{a \in R} \{ \sum_{x=0}^{n-1}  \left( w(x) - a f(t+x) \right) ^2 \}.
 \]
 Po podniesieniu wyrażenia w nawiasie do kwadratu otrzymujemy
 \[
-  E(x) = \min_{a \in R} \{ \sum_{t=0}^{n-1}  (w^2(t) -2a w(t) f(t+x) + a^2 f^2(t+x)) \},
+  E(t) = \min_{a \in R} \{ \sum_{x=0}^{n-1}  \left( w^2(x) -2a w(x) f(t+x) + a^2 f^2(t+x) \right) \},
 \]
 \[
-  E(x) = \min_{a \in R} \{ \sum_{t=0}^{n-1}  w^2(t) -2a \sum_{t=0}^{n-1}  w(t) f(t+x) + a^2 \sum_{t=0}^{n-1} f^2(t+x) \}.
+  E(t) = \min_{a \in R} \{ \sum_{x=0}^{n-1}  w^2(x) -2a \sum_{x=0}^{n-1}  w(x) f(t+x) + a^2 \sum_{x=0}^{n-1} f^2(t+x) \}.
 \]
-Aby wyliczyć $E(x)$, należy zminimalizować wyrażenie
+Aby wyliczyć $E(t)$, należy zminimalizować wyrażenie
 \[
-  y(a) = \sum_{t=0}^{n-1}  w^2(t) -2a \sum_{t=0}^{n-1}  w(t) f(t+x) + a^2 \sum_{t=0}^{n-1} f^2(t+x).
+  y(a) = \sum_{x=0}^{n-1}  w^2(x) -2a \sum_{x=0}^{n-1}  w(x) f(t+x) + a^2 \sum_{x=0}^{n-1} f^2(t+x).
 \]
 Korzystając z faktu, że $y(a)$ jest funkcją kwadratową, możemy wyliczyć $a$ minimalizujące $y(a)$
 \[
-  a = \frac{ \sum\limits_{t=0}^{n-1}  w(t) f(t+x) }{ \sum\limits_{t=0}^{n-1} f^2(t+x) }.
+  a = \frac{ \sum\limits_{x=0}^{n-1}  w(x) f(t+x) }{ \sum\limits_{x=0}^{n-1} f^2(t+x) }.
 \]
-Ostatecznie dostajemy wzór na $E(x)$
+Ostatecznie dostajemy wzór na $E(t)$
 \[
-  E(x) = \sum_{t=0}^{n-1}  w^2(t)  - \frac {\left(\sum\limits_{t=0}^{n-1}  w(t) f(t+x) \right)^2 } { \sum\limits_{t=0}^{n-1} f^2(t+x)}.
+  E(t) = \sum_{x=0}^{n-1}  w^2(x)  - \frac {\left(\sum\limits_{x=0}^{n-1}  w(x) f(t+x) \right)^2 } { \sum\limits_{x=0}^{n-1} f^2(t+x)}.
 \]
 
-Zauważmy, że dzięki skalowaniu skalarem $a$  sygnału $f(x)$, a nie \textit{wzorca} $w(x)$,
-otrzymane $E(x)$ nie zależy od siły odebranego sygnału. Ułatwia to porównanie błędów w dwóch różnych miejscach.
-$E(x)$ zależy jednak od siły sygnału wzorcowego -- możemy się od niego  uniezależnić, wyznaczając
-błąd względny $e(x)$
+Zauważmy, że dzięki skalowaniu skalarem $a$  sygnału $f(t)$, a nie \textit{wzorca} $w(x)$,
+otrzymane $E(t)$ nie zależy od siły odebranego sygnału. Ułatwia to porównanie błędów w dwóch różnych miejscach.
+$E(t)$ zależy jednak od siły sygnału wzorcowego -- możemy się od niego  uniezależnić, wyznaczając
+błąd względny $e(t)$
 \[
-  e(x) = \frac{E(x)}{\sum\limits_{t=0}^{n-1}  w^2(t)}.
+  e(t) = \frac{E(t)}{\sum\limits_{x=0}^{n-1}  w^2(x)}.
 \]
-Po podstawieniu $E(x)$ dostajemy
+Po podstawieniu $E(t)$ dostajemy
 \[
-  e(x) = 1 - \frac {\left(\sum\limits_{t=0}^{n-1}  w(t) f(t+x) \right)^2 } { \sum\limits_{t=0}^{n-1} f^2(t+x) \sum\limits_{t=0}^{n-1}  w^2(t)}.
+  e(t) = 1 - \frac {\left(\sum\limits_{x=0}^{n-1}  w(x) f(t+x) \right)^2 } { \sum\limits_{x=0}^{n-1} f^2(t+x) \sum\limits_{x=0}^{n-1}  w^2(x)}.
 \]
  
- Funkcję $e(x)$  można interpretować następująco:
- im mniejszy błąd $e(x)$, tym większe prawdopodobieństwo, że szukany \textit{wzorzec} $w$ znajduje się na pozycji $x$ w 
+ Funkcję $e(t)$  można interpretować następująco:
+ im mniejszy błąd $e(t)$, tym większe prawdopodobieństwo, że szukany \textit{wzorzec} $w$ znajduje się na pozycji $t$ w 
  odebranym sygnale $f$. 
 
- Wynikiem obliczeń modułu \textit{find\_pattern.py} jest cała funkcja $e(x)$, na podstawie której moduł \textit{xyz.py}
+ Wynikiem obliczeń modułu \textit{find\_pattern.py} jest cała funkcja $e(t)$, na podstawie której moduł \textit{xyz.py}
  wyznacza pozycję i orientację nadajnika, uwzględniając przy tym 
  jego kształt (nadmiarowość danych), a także prawdopodobieństwo, że znaleziony \textit{wzorzec} znajduje się w określonej pozycji.
  Rysunek \ref{fig:blad_korel} przedstawia wynik przetwarzania sygnału przez moduł \textit{find\_pattern.py}.
@@ -105,11 +105,11 @@ Po podstawieniu $E(x)$ dostajemy
 \end{figure}
  
  
- Analiza złożoności obliczeniowej: wyliczenie zarówno $ \sum\limits_{t=0}^{n-1}  w^2(t) $,
-jak i $\sum\limits_{t=0}^{n-1} f^2(t+x)$ wymaga jedynie liniowej liczby operacji, a 
- $\sum\limits_{t=0}^{n-1}  w(t) f(t+x) $ jest korelacją wzajemną funkcji $w(t)$ i $f(x)$, którą
- można wyliczyć w czasie $m \log(m)$, korzystając z szybkiej transformacji Fouriera \cite{bib:FFT_correlation},
- gdzie $m = \max \{|w|, |f| \}$. Wyliczenie całej funkcji $e(x)$ wymaga zatem jedynie $m \log(m)$ operacji.
+ Wyliczenie zarówno $ \sum\limits_{x=0}^{n-1}  w^2(x) $,
+jak i $\sum\limits_{x=0}^{n-1} f^2(t+x)$ wymaga jedynie liniowej liczby operacji, a 
+ $\sum\limits_{x=0}^{n-1}  w(x) f(t+x) $ jest korelacją wzajemną funkcji $w(x)$ i $f(t)$, którą
+ można wyliczyć w czasie $k \log(k)$, korzystając z szybkiej transformacji Fouriera \cite{bib:FFT_correlation},
+ gdzie $k = \max \{|f|, |w| \} = \max \{n,m\}$. Wyliczenie całej funkcji $e(t)$ wymaga zatem jedynie $k \log(k)$ operacji.
 
  
  Kolejnym zadaniem modułu \textit{find\_pattern.py} jest uaktualnianie \textit{wzorca}.
